WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74145
Fix a paste-o in ScrollAnimatorMac::updateScrollerStyle
https://bugs.webkit.org/show_bug.cgi?id=74145
Summary
Fix a paste-o in ScrollAnimatorMac::updateScrollerStyle
Anders Carlsson
Reported
2011-12-08 17:12:22 PST
Fix a paste-o in ScrollAnimatorMac::updateScrollerStyle
Attachments
Patch
(1.88 KB, patch)
2011-12-08 17:13 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-12-08 17:13:22 PST
Created
attachment 118498
[details]
Patch
Anders Carlsson
Comment 2
2011-12-08 17:16:32 PST
Committed
r102403
: <
http://trac.webkit.org/changeset/102403
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug