Fix a paste-o in ScrollAnimatorMac::updateScrollerStyle https://bugs.webkit.org/show_bug.cgi?id=74145

Reviewed by Sam Weinig.

Call setHorizontalScrollerImp to set the horizontal scrollbar painter.

* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::updateScrollerStyle):

Canonical link: https://commits.webkit.org/90808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102403 268f45cc-cd09-0410-ab3c-d52691b4dbfc